refac(front): #3686 adjust footer
- Adjust the look of the footer
- Add solutions list


Former-commit-id: 6f263381539d50f165f02c20d883b16d3cabf5a4

--- a/theme/2020/templates/footer.html
+++ b/theme/2020/templates/footer.html
@@ -1,38 +1,45 @@
 <div class="bg-white">
-  <div class="mw-1366 ph-body center df-l db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
+  <div class="mw-1366 ph-body center df-l flex-wrap db-ml pb5-l pb5-m pb4 pt4-ns pt2 footer-component">
     <!-- company logo -->
-    <div class="pt1 pt4-l pl2-l w-footer-phrase mh-ml">
-      <div>
-        <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
-          alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
-        <div class="ml4-l mr-auto ml-auto tl-l tc">
-          <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">Ready to start with Fluid Attacks?</p>
-          <span class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
-            <div class="w2-5 dib"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
-              alt="Fluid Attacks logo"></div>
-            Ready to start?</span>
-          <div class="dib-l dn ml3">
-            <a class="roboto fw1 fl f4 no-underline c-fluid-bk hv-fluid-dkred pb5"
-               href="{{ SITEURL }}/contact-us/">
-              <img
-              class="w1 relative pt2 ml2 fr"
-              src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-btn.svg"
-              alt="Young hacker smiling">
-              Contact Us
-            </a>
-          </div>
-          <div class="dn-l dib tc w-100-s w-100-m pb4">
-            <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-               href="{{ SITEURL }}/contact-us/">
-              <span class="br2 bannerbt hv-bt-fluid-rd ph5 pv2 bt-trans white b roboto pointer mt2">
-                 Contact Fluid Attacks
-              </span>
-            </a>
-          </div>
+    <div class="pt1 pt4-l w-100 center">
+      <div class="tc">
+        <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">
+          <img
+          class="nb3"
+          loading="lazy"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+          alt="Fluid Attacks logo">
+          Start with Fluid Attacks
+        </p>
+        <p class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
+          <img
+          class="nb3"
+          loading="lazy"
+          src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/mini-logo.png"
+          alt="Fluid Attacks logo">
+          Ready to start?
+        </p>
+        <div class="dib-l dn ml3">
+          <a class="roboto fw1 fl f4 no-underline c-fluid-bk hv-fluid-dkred"
+              href="{{ SITEURL }}/contact-us/">
+            <img
+            class="w1 relative pt2 ml2 fr"
+            src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-btn.svg"
+            alt="Young hacker smiling">
+            Contact Us
+          </a>
+        </div>
+        <div class="dn-l dib tc w-100-s w-100-m pb4">
+          <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
+              href="{{ SITEURL }}/contact-us/">
+            <span class="br2 bannerbt hv-bt-fluid-rd ph5 pv2 bt-trans white b roboto pointer mt2">
+                Contact Fluid Attacks
+            </span>
+          </a>
         </div>
       </div>
     </div>
-    <div class="pb4 w-footer-links ml0-footer text-center-ml db-l dn nowrap">
+    <div class="pb4 w-100 ml0-footer text-center-ml db-l dn nowrap">
       <div class="pt4-l b dib v-top tl mr2">
         <div class="lh-2">
           <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
@@ -70,6 +77,38 @@
           <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
             href="{{ SITEURL }}/services/comparative/">
             Comparative
+          </a><br>
+        </div>
+      </div>
+      <div class="pt4-l b dib v-top tl mh2">
+        <div class="lh-2">
+          <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
+            href="{{ SITEURL }}/solutions/devsecops/" >
+            Solutions
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/devsecops/">
+            DevSecOps
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/security-testing/">
+            Security Testing
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/pentesting/">
+            Pentesting
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/ethical-hacking/">
+            Ethical Hacking
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/red-teaming/">
+            Red Teaming
+          </a><br>
+          <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+            href="{{ SITEURL }}/solutions/attack-simulation/">
+            Attack Simulation
           </a><br>
         </div>
       </div>
@@ -145,7 +184,7 @@
           </a><br>
         </div>
       </div>
-      <div class="pt4-l b dib v-top tl mw-14 fr-xl">
+      <div class="pt4-l b dib v-top tl mw-14 fr">
         <div class="social-media">
           <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
             <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
