fix(front): #3693.2 fix header title size
- Changed the size of the title for big screens


Former-commit-id: e542afbc0ad7d5453df314a8d838031dc7fb31db

--- a/theme/2020/templates/landing.html
+++ b/theme/2020/templates/landing.html
@@ -32,7 +32,7 @@
          data-aos-delay="1000"
          data-aos-offset="0"
          data-aos-duration="500">
-      <h1 class="c-fluid-bk fheader f-6-m fw9 tl tc-m neue ma0">PENTEST</h1>
+      <h1 class="c-fluid-bk fheader fw9 tl tc-m neue ma0">PENTEST</h1>
       <p class="c-fluid-bk roboto fw3 lh2 f-sub ma0 tl tc-m w-auto-ns nt4-ns">
         FOR YOUR SOFTWARE DEVELOPMENT LIFE CYCLE
       </p>
