--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -228,14 +228,14 @@ $codeyellow: rgba(230, 219, 116, 1);
 .nt-landing { margin-top: -110px;}
 .title-sols { text-align: center; }
 .width-sols { width: 100%; }
-.section-height { height: 600px; }
+.section-height { height: 37.5rem; }
 .lh-18 { line-height: 1.8; }
 .f-solution { font-size: 1.25rem; }
 .f-card { font-size: 3.75rem; }
 .mw-1366 { max-width: 1366px; }
 .ph-body { padding: 0 1.875rem; }
 .pl-body { padding-left: 1.875rem; }
-.fheader { font-size: 9rem; }
+.fheader { font-size: 144px; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1200px) {
@@ -308,7 +308,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .h-search-icon { height: 1.125rem; }
   .w-menu-bt { width: 18px; }
   .dn-s { display: none; }
-  .section-height { height: 800px; }
+  .section-height { height: 50rem; }
 }
 //medium resolutions
 @media screen and (min-width: 30em) and (max-width: 60em) {
@@ -325,7 +325,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .w-menu-bt { width: 18px; }
   .dn-s { display: none; }
   .h40-m { height: 40rem; }
-  .section-height { height: 800px; }
+  .section-height { height: 50rem; }
 }
 
 //Large screens
