feat(front): #3641 add language tag on webinars
- Added a gray tag on each webinar to display the language of each one


Former-commit-id: ca106a5318725ded3b5c3e28f41b07414de9bf43

--- a/theme/2020/static/scss/base.scss
+++ b/theme/2020/static/scss/base.scss
@@ -152,6 +152,10 @@ $codeyellow: rgba(230, 219, 116, 1);
 .bg-menu-products { background-image: url('../../images/menu/bg-menu-products.png'); }
 .bg-menu-solutions { background-image: url('../../images/menu/bg-menu-solutions.png'); }
 .bg-menu-aboutus { background-image: url('../../images/menu/bg-menu-aboutus.png'); }
+.bg-card1 { background-image: url('../../images/resources/card1.png'); height: 200px;}
+.bg-card3 { background-image: url('../../images/resources/card3.png'); height: 200px;}
+.bg-card8 { background-image: url('../../images/resources/card8.png'); height: 200px;}
+.bg-card9 { background-image: url('../../images/resources/card9.png'); height: 200px;}
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
