--- a/theme/2020/templates/resources/resources.html
+++ b/theme/2020/templates/resources/resources.html
@@ -144,9 +144,11 @@
   <div class="roboto flex-ns flex-wrap-ns justify-between-m mw-1200 pv4-l pv3 bg-graylight ml-auto mr-auto">
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card1 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Fast Development while Preserving Security
@@ -184,9 +186,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card1 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Security for Users or Time-To-Market?
@@ -227,9 +231,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card3 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           When Is a Security Test Successful?
@@ -312,9 +318,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card8 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ENG</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Continuous Hacking and Vulnerability Remediation
@@ -333,9 +341,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card8 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Continuous Hacking and Vulnerability Remediation
@@ -354,9 +364,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card3 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           OWASP No Top 10: 190 Additional Vulnerabilities
@@ -375,9 +387,11 @@
     </div>
     <div
       class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card9.png"
-      alt="Webinar cover ESP"
-      class="br3 br--top">
+      <div class="bg-card9 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ESP</span>
+        </div>
+      </div>
       <div class="ph3 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Developing to Resist
