refac(doc): #3703 people fix last paragraph
- The two wrong words in the last paragraph were modified.


Former-commit-id: e1ae1ae6d3bec93712de2886e08ce653468d6fdc

--- a/theme/2020/templates/about-us/people.html
+++ b/theme/2020/templates/about-us/people.html
@@ -145,8 +145,8 @@
               Marketing & Sales Teams
             </h2>
             <p class="c-fluid-bk fw3 f-solution lh-2 tl f3">
-              All previous experts work alogside other marketing
-              and sales professionals who, with their expensive
+              All previous experts work alongside other marketing
+              and sales professionals who, with their extensive
               knowledge and commitment, end up giving enough
               support for Fluid Attacks to stand out from its
               competitors.
