--- a/airs/theme/2020/templates/about-us/people.html
+++ b/airs/theme/2020/templates/about-us/people.html
@@ -72,7 +72,7 @@
 <div class="bg-graylight">
   <div class="roboto mw-1200 ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     <div class="w-100">
-      <div class="flex items-center justify-center flex-wrap pb5">
+      <div class="section-height flex items-center justify-center flex-wrap">
         <div>
           <div class="fl-l pr3-l tl-l tc w-50-l" data-aos="fade-right">
             <img
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="flex items-center justify-center flex-wrap pv5">
+      <div class="section-height flex items-center justify-center flex-wrap">
         <div>
           <div class="fr-l pr3-l tl-l tc w-50-l" data-aos="fade-left">
             <img
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="flex items-center justify-center flex-wrap pv5">
+      <div class="section-height flex items-center justify-center flex-wrap">
         <div>
           <div class="fl-l pr3-l tl-l tc w-50-l" data-aos="fade-right">
             <img
@@ -133,7 +133,7 @@
           </div>
         </div>
       </div>
-      <div class="flex items-center justify-center flex-wrap pv5">
+      <div class="section-height flex items-center justify-center flex-wrap">
         <div>
           <div class="fr-l pl4-l tl-l tc w-50-l" data-aos="fade-left">
             <img
