integrates\fix(front): #3334 fix compromised attributes
- Change the CSS to make a break-word when the string is too
long to fit in the div.


Former-commit-id: 78144731260a123fa02502782afc9c50fbc79e4f

--- a/integrates/front/src/scenes/Dashboard/components/EditableField/index.css
+++ b/integrates/front/src/scenes/Dashboard/components/EditableField/index.css
@@ -1,7 +1,7 @@
 :local .currentValue {
   font-size: "18px";
   white-space: pre-wrap;
-  width: fit-content;
+  word-wrap: break-word;
 }
 
 :local .title {
