airs\refac(front): #3340.1 increase width
- Increased width of the internal pages


Former-commit-id: 46d08beebb291da5d5068fdf7c4e469137a5532e

--- a/airs/theme/2020/templates/about-us/cardsgen.html
+++ b/airs/theme/2020/templates/about-us/cardsgen.html
@@ -69,7 +69,7 @@
 {% block header %}
 <div class="bg-graylight">
   <div
-    class="{{page.banner}} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
+    class="{{page.banner}} coverm cover-s banner-height justify-center items-center flex bg-center mw-1366 ml-auto mr-auto">
     <div class="w-100 center">
       <h1 class="white fw7 f1 neue tc f-5-l ma0">
         {{ page.title }}
@@ -82,7 +82,7 @@
 <!-- This block is for the content of the page -->
 {% block content %}
 <div class="bg-graylight">
-  <div class="roboto internal mw-1200 ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
+  <div class="roboto internal mw-1366 ph-body ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     <div>
       {{ page.content }}
     </div>
