--- a/airs/theme/2020/templates/index.html
+++ b/airs/theme/2020/templates/index.html
@@ -56,7 +56,7 @@ Blog | {{ SITENAME }}
 {% block content %}
  <!-- Div Index -->
  <div class="bg-graylight">
-   <div class="roboto flex-ns flex-wrap-ns justify-between-m mw-1200 pv4-l pv3 bg-graylight ml-auto mr-auto">
+   <div class="roboto flex-ns flex-wrap-ns justify-between-m mw-1366 ph-body pv4-l pv3 bg-graylight ml-auto mr-auto">
     <!-- Blog Posts -->
     {% for article in articles_page.object_list %}
       <div
