--- a/airs/theme/2020/templates/about-us/people.html
+++ b/airs/theme/2020/templates/about-us/people.html
@@ -59,7 +59,7 @@
 
 {% block header %}
 <div
-  class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
+  class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1366 ml-auto mr-auto">
   <div class="w-100 center">
     <h1 class="white fw7 f1 neue tc f-5-l ma0">
       {{ page.title }}
@@ -70,7 +70,7 @@
 
 {% block content %}
 <div class="bg-graylight">
-  <div class="roboto mw-1200 ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
+  <div class="roboto mw-1366 ph-body ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     <div class="w-100">
       <div class="section-height flex items-center justify-center flex-wrap">
         <div>
