--- a/airs/theme/2020/templates/page.html
+++ b/airs/theme/2020/templates/page.html
@@ -215,7 +215,7 @@
   {% if page.slug == "careers/" %}
   <div class="bg-graylight">
     <div
-      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1366 ml-auto mr-auto">
       <div class="w-100 center">
         <h1 class="white fw7 f1 f-5-l neue tc ma0">
           {{ page.subtitle }}
@@ -231,7 +231,7 @@
   {% else %}
   <div class="bg-graylight">
     <div
-      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1200 ml-auto mr-auto">
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-1366 ml-auto mr-auto">
       <div class="w-100 center">
         <h1 class="white fw7 f1 f-5-l neue tc ma0">
           {{ page.title }}
@@ -244,7 +244,7 @@
 {% endblock header %}
 {% block content %}
 <div class="bg-graylight">
-  <div class="roboto internal mw-1200 ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
+  <div class="roboto internal mw-1366 ph-body ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
     {% if not page.banner %}
     <h1 class="roboto tc">{{ page.title }}</h1>
     {% endif %}
