airs\refac(front): #3141 add redeban logo
- Added redeban logo to the customers carousel


Former-commit-id: 66ea070a3897c4647e24824be2a7cd72c5682f3f

--- a/airs/theme/2020/templates/clients-carousel.html
+++ b/airs/theme/2020/templates/clients-carousel.html
@@ -109,6 +109,11 @@
     </div>
     <div class="slide mh5 ">
       <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo22.png"
+        alt="Tigo logo">
+    </div>
+    <div class="slide mh5 ">
+      <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo01.png"
         alt="RSA logo">
     </div>
@@ -212,6 +217,11 @@
     <div class="slide mh5 ">
       <img
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo21.png"
+        alt="Tigo logo">
+    </div>
+    <div class="slide mh5 ">
+      <img
+        src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/trusted-by/logo22.png"
         alt="Tigo logo">
     </div>
   </div>
