airs\feat(cross): #3156.1 new skims page
- Added new page for skims not linked to anything yet
- Added new banner for the skims page
- Added new mini-menu in the skims page for products


Former-commit-id: 98fad8a22c744da41f22bfb4b2b3a3944a780907

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -55,6 +55,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .bc-lightergray { border-color: $lightergray; }
 .bc-fluid-gray { border-color: $fluid-gray; }
 .bc-fluid-red { border-color: $button-red; }
+.bc-hover-red { border-color: $button-hover; }
 .bg-dk-red { background-color: $button-red;}
 .bg-graylight { background-color: $graylight; }
 .bg-graybar { background-color: $graybar; }
@@ -130,6 +131,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .drills-bg { background-image: url('../../images/products/drills/drills-cover.png'); }
 .forces-bg { background-image: url('../../images/products/forces/cover-forces.png'); }
 .rules-bg { background-image: url('../../images/products/rules/cover-rules.png'); }
+.skims-bg { background-image: url('../../images/products/skims/cover-skims.png'); }
 .thank-you-bg { background-image: url('../../images/contact-us/bg-thank-you-page.png'); }
 .careers-main-bg { background-image: url('../../images/careers/cover-careers.png'); }
 .resources-bg { background-image: url('../../images/resources/resources-main.png'); }
